fix: Chat set-userChatTime-align-bottom

--- a/src/containers/chatting/Chatting.css
+++ b/src/containers/chatting/Chatting.css
@@ -44,26 +44,20 @@
 }
 
 .userChatBox{
-    clear: both;
-    position: relative;
-    
-    overflow: hidden;
     background-color: #f1f3f5;
     padding-bottom: 10px;
+
+    display: flex;
+    justify-content: flex-end;
 }
 
 .userDate{
-    float: right;
-    margin-top: 16px;
     margin-right: 6px;
-    margin-bottom: 10px;
 
     font-size: 12px;
     color: #adb5bd;
-/*  
-    position: absolute;
-    bottom: 0;
-    right: 0; */
+
+    align-self: flex-end;
 }
 
 .userChat{
@@ -71,7 +65,6 @@
     color: white;
     width: fit-content;
     
-    float: right;
     max-width: 60%;
 
     padding: 10px;
@@ -81,6 +74,7 @@
 
     white-space: pre-wrap;
     word-break:break-all;
+    float: right;
 }
 
 .botChatBox{
